--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "cashfree-pg": "^5.0.8",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.539.0",
+    "next": "15.4.6",
     "react": "19.1.0",
+    "react-datepicker": "^8.5.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "react-hot-toast": "^2.5.2",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
